--- a/invest.html
+++ b/invest.html
@@ -7,44 +7,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Add Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!--  -->
     <style>
-    /* Add background animation */
-    @keyframes moveBg {
-        0% {
-        background-position: 0 0;
-        }
-        50% {
-        background-position: 0 10px;
-        }
-        100% {
-        background-position: 0 0;
-        }
+    /* Modern background animation */
+    @keyframes gradient {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
     }
 
-    .animated-bg {
-        animation: moveBg 5s ease-in-out infinite;
+    .gradient-bg {
+        background: linear-gradient(-45deg, #050505, #0a0a0a, #050505, #0a0a0a);
+        background-size: 400% 400%;
+        animation: gradient 15s ease infinite;
     }
 
-    /* Transition for the navbar hide/show */
+    /* Smooth transitions */
     .navbar-transition {
-        transition: transform 0.3s ease-in-out;
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .navbar-hidden {
         transform: translateY(-100%);
     }
 
+    /* Modern card hover effects */
+    .experience-card {
+        transition: all 0.3s ease;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .experience-card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+        border-color: rgba(234, 179, 8, 0.3);
+    }
+
+    /* Animated underline */
     @keyframes drawUnderline {
-    to {
-        stroke-dashoffset: 0;
+        to {
+            stroke-dashoffset: 0;
         }
+    }
+
+    /* Skill tag hover effect */
+    .skill-tag {
+        transition: all 0.3s ease;
+        border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .skill-tag:hover {
+        transform: translateY(-2px);
+        border-color: rgba(234, 179, 8, 0.3);
+        box-shadow: 0 5px 15px rgba(234, 179, 8, 0.1);
+    }
+
+    /* Modern button styles */
+    .modern-button {
+        background: linear-gradient(45deg, #1a1a1a, #2a2a2a);
+        border: 1px solid rgba(234, 179, 8, 0.2);
+        transition: all 0.3s ease;
+        position: relative;
+        overflow: hidden;
+    }
+
+    .modern-button:hover {
+        background: linear-gradient(45deg, #2a2a2a, #3a3a3a);
+        border-color: rgba(234, 179, 8, 0.4);
+        transform: translateY(-1px);
+        box-shadow: 0 5px 15px rgba(234, 179, 8, 0.1);
+    }
+
+    .modern-button:active {
+        transform: translateY(0);
+    }
+
+    /* Custom heading styles */
+    .heading-primary {
+        font-family: 'Playfair Display', serif;
+        font-weight: 700;
+    }
+
+    .heading-secondary {
+        font-family: 'Inter', sans-serif;
+        font-weight: 600;
+    }
+
+    /* Fade-in animation for sections */
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+    }
+
+    .fade-in {
+        animation: fadeIn 0.6s ease-out forwards;
+    }
+
+    /* Scroll progress indicator */
+    .scroll-progress {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 3px;
+        background: linear-gradient(to right, #eab308, #fcd34d);
+        z-index: 1000;
+        transition: width 0.1s ease;
     }
     </style>
 </head>
 
-<body class="bg-[url('data:image/svg+xml,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20viewBox%3D%220%200%2020%2020%22%20xmlns%3D%22http://www.w3.org/2000/svg%22%3E%3Ccircle%20cx%3D%2210%22%20cy%3D%2210%22%20r%3D%220.5%22%20fill%3D%22%23444%22%20/%3E%3C/svg%3E')] bg-fixed bg-repeat bg-gray-950 text-gray-200 flex flex-col gap-8 lg:gap-12 animated-bg">
+<body class="gradient-bg text-gray-200 flex flex-col gap-8 lg:gap-12 font-light">
+    <!-- Scroll Progress Bar -->
+    <div class="scroll-progress" id="scrollProgress"></div>
 
     <!-- Floating Action Button -->
     <!-- <button id="backToTop" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="fixed bottom-6 right-6 bg-gray-800 hover:bg-gray-700 text-white hover:text-amber-300 p-4 rounded-full shadow-lg transition duration-300 z-50 opacity-0 pointer-events-none">
@@ -66,15 +146,15 @@
 
 
     <!-- Top Bar -->
-    <header id="navbar" class="fixed top-0 left-0 w-full bg-gray-950 text-white p-4 shadow-lg z-50 navbar-transition">
-        <div class="flex flex-col gap-3 justify-between items-center">
-            <h1 class="text-2xl font-medium"><a href="./index.html" class="text-white hover:text-amber-300 py-2 transition-all duration-300">sumit.design</a></h1>
-            <nav>
-                <ul class="flex space-x-6">
-                <li><a href="./about.html" class="text-white hover:text-amber-300 py-2 transition-all duration-300">About me</a></li>
-                <li><a href="./index.html#projects" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Projects</a></li>
-                <li><a href="mailto:workspcae0105@gmai.com" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Contact</a></li>
-                </ul>
+    <header id="navbar" class="fixed top-0 left-0 w-full bg-[#0a0a0a]/80 backdrop-blur-md text-white p-4 shadow-lg z-50 navbar-transition">
+        <div class="flex flex-col gap-2 justify-between items-center">
+            <h1 class="text-2xl font-medium">
+                <a href="./index.html" class="text-white hover:text-amber-300 py-2 transition-all duration-300">sumit.design</a>
+            </h1>
+            <nav class="flex gap-6">
+                <a href="./about.html" class="text-white hover:text-amber-300 py-2 transition-all duration-300">About me</a>
+                <a href="./index.html#projects" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Projects</a>
+                <a href="mailto:workspace0105@gmail.com" class="text-white hover:text-amber-300 py-2 transition-all duration-300">Contact</a>
             </nav>
         </div>
     </header>
@@ -214,7 +294,7 @@
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
                         <h3 class="text-xl lg:text-2xl font-semibold">Onboarding</h3>
-                        <p class="text-gray-400 font-light mt-3">The onboarding process introduces users to the app’s purpose and functionality, guiding both startup founders and potential investors through tailored experiences. For founders, the onboarding highlights steps to post their startup, while for investors, it explains how to browse and evaluate startups for funding. The design must ensure clarity, reduce friction, and set expectations, using a combination of visuals and short descriptions to ease users into the platform. Features like social login and quick-start guides could help reduce onboarding time and improve user retention.</p>
+                        <p class="text-gray-400 font-light mt-3">The onboarding process introduces users to the app's purpose and functionality, guiding both startup founders and potential investors through tailored experiences. For founders, the onboarding highlights steps to post their startup, while for investors, it explains how to browse and evaluate startups for funding. The design must ensure clarity, reduce friction, and set expectations, using a combination of visuals and short descriptions to ease users into the platform. Features like social login and quick-start guides could help reduce onboarding time and improve user retention.</p>
 
                         <div class="w-full mt-4">
                             <img src="./images/invest/ui-designs-1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
