Updated resume links to direct download and added "Let's Connect!!!" section across multiple pages for improved user engagement.

--- a/ux-animation.html
+++ b/ux-animation.html
@@ -539,6 +539,23 @@
 
     <hr class="border-t-2 border-gray-700 mx-4 my-8 lg:w-3/5 lg:mx-auto">
 
+    <!-- Let's Connect!!! -->
+    <div class="flex flex-col gap-2 justify-center items-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
+        <p class="text-4xl font-semibold text-center">Interested in 
+            <span class="inline-block text-amber-300 relative pb-3">
+                <span class="relative z-10">collaboration?</span>
+                <svg viewBox="0 0 100 10" preserveAspectRatio="none" class="absolute bottom-0 left-0 w-full h-3 z-0">
+                  <path d="M0,5 Q50,0 100,5" fill="none" stroke="#fcd34d" stroke-width="3"
+                    stroke-dasharray="100"
+                    stroke-dashoffset="100"
+                    style="animation: drawUnderline 1s ease forwards;"></path>
+                </svg>
+            </span>
+        </p>
+        <p class="text-xl mt-4 text-center">Let's discuss what we can create together.</p>
+        <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max mt-2"><a href="mailto:workspace0105@gmail.com">Let's Connect!!!</a></button>
+    </div>
+
     <!-- More Projects -->
     <div class="flex flex-col gap-6 px-4 lg:w-3/5 lg:m-auto lg:px-0">
 
@@ -602,7 +619,7 @@
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950 mt-8 border-t-2 border-gray-800">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest in my work!</p>
-            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="./images/general/Résumé_SumitNikhare.pdf" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="https://drive.google.com/uc?export=download&id=1WN0yz2GjlTY5Lv3TrJBTjna5iJUG1gOe" target="_blank" rel="noopener noreferrer" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>.  © 2024 Sumit Nikhare</p>
     </div>
