--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
         </div>
         
         <a href="https://drive.google.com/file/d/1CtltZkOelElah7Tzy9kSwZ1F75ozBLiJ/view?usp=sharing">
-            <button class="modern-button text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Resume</button>
+            <button class="modern-button text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max"><a href="https://drive.google.com/uc?export=download&id=1WN0yz2GjlTY5Lv3TrJBTjna5iJUG1gOe" target="_blank" rel="noopener noreferrer">View Resume</a></button>
         </a>
     </div>
 
@@ -336,32 +336,29 @@
         </div>
     </div>
 
-    <!-- Contact section with modern styling -->
-    <div class="flex flex-col gap-2 justify-center items-center text-center min-h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0 fade-in">
-        <div class="relative">
-            <p class="text-4xl font-semibold text-center">Interested in 
-                <span class="inline-block text-amber-300 relative pb-3">
-                    <span class="relative z-10">collaboration?</span>
-                    <svg viewBox="0 0 100 10" preserveAspectRatio="none" class="absolute bottom-0 left-0 w-full h-3 z-0">
-                        <path d="M0,5 Q50,0 100,5" fill="none" stroke="#fcd34d" stroke-width="3"
-                            stroke-dasharray="100"
-                            stroke-dashoffset="100"
-                            style="animation: drawUnderline 1s ease forwards;"></path>
-                    </svg>
-                </span>
-            </p>
-            <p class="text-xl mt-4 text-center">Let's discuss what we can create together.</p>
-            <button class="modern-button text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max mt-6">Let's Connect!!!</button>
-        </div>
+    <!-- Let's Connect!!! -->
+    <div class="flex flex-col gap-2 justify-center items-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
+        <p class="text-4xl font-semibold text-center">Interested in 
+            <span class="inline-block text-amber-300 relative pb-3">
+                <span class="relative z-10">collaboration?</span>
+                <svg viewBox="0 0 100 10" preserveAspectRatio="none" class="absolute bottom-0 left-0 w-full h-3 z-0">
+                  <path d="M0,5 Q50,0 100,5" fill="none" stroke="#fcd34d" stroke-width="3"
+                    stroke-dasharray="100"
+                    stroke-dashoffset="100"
+                    style="animation: drawUnderline 1s ease forwards;"></path>
+                </svg>
+            </span>
+        </p>
+        <p class="text-xl mt-4 text-center">Let's discuss what we can create together.</p>
+        <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max mt-2"><a href="mailto:workspace0105@gmail.com">Let's Connect!!!</a></button>
     </div>
 
     <!-- Bottom Bar with modern styling -->
     <div class="w-full flex flex-col gap-2 items-center py-16 px-3 bg-gray-950/80 backdrop-blur-md mt-8">
         <div class="flex flex-col text-center items-center">
             <p class="text-xl font-semibold m-2">Thank you for your interest!</p>
-            <p class="bg-gray-900/50 px-4 py-2 rounded-xl inline-block w-max m-2 backdrop-blur-sm">
-                <a href="https://drive.google.com/file/d/1CtltZkOelElah7Tzy9kSwZ1F75ozBLiJ/view?usp=sharing" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a>
-            </p>
+            <p class="bg-gray-900 px-4 py-2 rounded-xl inline-block w-max m-2"><a href="https://drive.google.com/uc?export=download&id=1WN0yz2GjlTY5Lv3TrJBTjna5iJUG1gOe" target="_blank" rel="noopener noreferrer" class="hover:text-amber-300 transition duration-500 ease-in-out">View Resume</a></p>
+
         </div>
         <p class="text-gray-400 m-2 text-center">Made by <a href="./about.html" class="hover:text-amber-300 transition duration-500 ease-in-out underline underline-offset-3">Sumit Nikhare</a>. © 2024 Sumit Nikhare</p>
     </div>
