Updated project descriptions across multiple pages to reflect new experiences in real estate technology, fintech, and UI animation, enhancing clarity and user engagement.

--- a/tarp.html
+++ b/tarp.html
@@ -268,13 +268,13 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <img src="./images/chip2/icons/context.svg" alt="Logo" class="w-12 h-auto"/>
                 <p class="text-xl font-bold mt-4">Context & Background</p>
-                <p class="text-gray-400 mt-4">The real estate sector relies heavily on Channel Partners (CPs), yet their workflows remain outdated and fragmented. Anarock recognized the need for a unified digital solution to enhance efficiency, trust, and scalability for both individual brokers and organizations.</p>
+                <p class="text-gray-400 mt-4">Permute Solutions Pvt. Ltd., a startup focused on creating agile software solutions, recognized the need for a unified design system to accelerate development and ensure consistency across their product ecosystem. The company was building multiple applications with varying UI patterns, leading to development inefficiencies and inconsistent user experiences.</p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
-                    <li>CPs traditionally use scattered tools and offline methods to manage clients, listings, and commissions.</li>
-                    <li>These manual processes result in inefficiencies, lost opportunities, and a lack of professional credibility.</li>
-                    <li>There's no single platform tailored to the complete journey of a CP—from onboarding to post-sale finance tracking.</li>
-                    <li>Clients often hesitate to trust brokers due to unverified credentials and inconsistent communication.</li>
-                    <li>Anarock aimed to bridge this gap by introducing a mobile-first platform to streamline and professionalize CP operations.</li>
+                    <li>Development teams were creating UI components from scratch for each project, resulting in inconsistent design patterns and increased development time.</li>
+                    <li>Multiple applications within the company ecosystem lacked visual cohesion, creating a fragmented user experience.</li>
+                    <li>Design decisions were being made in isolation, leading to maintenance challenges and scalability issues.</li>
+                    <li>There was no centralized design language or component library to guide developers and designers.</li>
+                    <li>Permute Solutions needed a scalable design system that could support rapid prototyping and development while maintaining design quality and consistency.</li>
                 </ul>
             </div>
 
@@ -283,22 +283,22 @@
                 <img src="./images/chip2/icons/business.svg" alt="Logo" class="w-12 h-auto"/>
                 <p class="text-xl font-bold mt-4">User Needs & Business Goals</p>
 
-                <p class="text-gray-400 mt-4">To ensure the platform serves both Channel Partners and the business effectively, it was essential to align user needs with strategic business goals. The design focuses on solving day-to-day broker challenges while supporting Anarock's vision for scalable growth and trust-driven sales.</p>
+                <p class="text-gray-400 mt-4">The TARP Design System was created to serve both the internal development teams and the end users of Permute Solutions' applications. The system needed to balance developer efficiency with user experience quality while supporting the company's agile development methodology.</p>
 
-                <p class="mt-4"><b class="text-gray-200 font-semibold">User Needs:</b></p>
+                <p class="mt-4"><b class="text-gray-200 font-semibold">Developer & Designer Needs:</b></p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-2">
-                    <li>A simple onboarding flow for both individual CPs and organizations, including verification (e.g., RERA details).</li>
-                    <li>A trusted identity tool (Digital Visiting Card) to build credibility with clients.</li>
-                    <li>An easy-to-use system to browse, filter, and share property listings with clients.</li>
-                    <li>A centralized space to manage leads, track client progress, and monitor commissions.</li>
+                    <li>A comprehensive component library with reusable UI elements to accelerate development cycles.</li>
+                    <li>Clear design guidelines and documentation to ensure consistent implementation across teams.</li>
+                    <li>Responsive design patterns that work across different screen sizes and devices.</li>
+                    <li>A flexible grid system that supports various layout requirements and content types.</li>
                 </ul>
 
                 <p class="mt-8"><b class="text-gray-200 font-semibold">Business Goals:</b></p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-2">
-                    <li>Digitize the broker ecosystem to increase sales efficiency and reduce lead leakage.</li>
-                    <li>Promote verified CPs to build trust and strengthen Anarock's brand reputation.</li>
-                    <li>Provide CPs with incentives like early commissions to encourage engagement and loyalty.</li>
-                    <li>Enable scalability by supporting both individual and organizational users within one platform..</li>
+                    <li>Reduce development time and costs by providing pre-built, tested UI components.</li>
+                    <li>Establish a consistent brand identity across all company products and applications.</li>
+                    <li>Improve user experience quality through standardized, well-tested design patterns.</li>
+                    <li>Enable faster prototyping and iteration cycles to support agile development methodology.</li>
                 </ul>
             </div>
         </div>
