--- a/ux-animation.html
+++ b/ux-animation.html
@@ -530,9 +530,11 @@
                 <div class="border-b-4 border-yellow-400 w-16"></div>
             </div>
 
-            <p class="text-gray-400">Working on the HWC OPD management app was an insightful journey, allowing me to design a system that significantly improves healthcare service delivery in rural areas. By focusing on user-centered design, I created modules that simplify complex workflows for health workers and ensure better patient care through streamlined processes. Integrating queue management with the OPD workflow, inventory management, and outreach activities provided a comprehensive solution that caters to the diverse needs of health workers and administrative officials alike.</p>
+            <p class="text-gray-400">Working on this UI Animation project was an enlightening experience that deepened my understanding of how thoughtful motion design can transform user interactions. By creating six distinct animation types—from hover effects and list-to-detail transitions to expandable sections and full-screen viewers—I learned that successful UX animation requires a delicate balance between functionality and delight.</p>
 
-            <p class="text-gray-400">This project deepened my understanding of healthcare challenges in underserved areas and the role of efficient digital solutions in addressing them. The key takeaway was striking a balance between usability and functionality—designing for users with varying technical expertise while ensuring all critical operations are handled efficiently. The experience reinforced the importance of aligning technology with the needs of healthcare systems and inspired me to continue exploring ways to create impactful designs in the health sector.</p>
+            <p class="text-gray-400">The key insight was that animations should serve a clear purpose: enhancing clarity, maintaining context, and reducing cognitive load rather than simply adding visual flair. Each animation was designed with specific user goals in mind—whether it was providing immediate feedback through hover states, creating seamless navigation flows, or enabling immersive content experiences. The project reinforced the importance of performance optimization and accessibility considerations, ensuring that motion enhances rather than hinders the user experience across different devices and user needs.</p>
+
+            <p class="text-gray-400">This work has inspired me to continue exploring how micro-interactions and thoughtful motion design can create more intuitive, engaging, and polished digital experiences that feel both modern and purposeful.</p>
 
         </div>
     </div>
